--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,114 +1,134 @@
 /* ==UserStyle==
 @name        wikimedia quiddity's various vector style tweaks
 @namespace   StylishThemes
-@version     1.0.33
+@version     1.0.34
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
 @author      quiddity-wp
 ==/UserStyle== */
-@-moz-document domain("wikipedia.org"), 
-domain("meta.wikimedia.org"), 
-domain("office.wikimedia.org"), 
-domain("commons.wikimedia.org"), 
-domain("species.wikimedia.org"), 
-domain("outreach.wikimedia.org"), 
-domain("wikimania.wikimedia.org"), 
-domain("foundation.wikimedia.org"), 
-domain("wikitech.wikimedia.org"), 
-domain("wiktionary.org"), 
-domain("mediawiki.org"), 
-domain("wikisource.org"), 
-domain("wikivoyage.org"), 
-domain("wikibooks.org"), 
-domain("wikinews.org"), 
-domain("wikiversity.org"), 
-domain("wikiquote.org"), 
-domain("wikidata.org"), 
-domain("beta.wmflabs.org"), 
-domain("wikifunctions.org") { 
-/* Stop Menus jumping on page load */
-@import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css');
-    
-/* hide the ToC's annoying "[hide]" links */
-    .toctogglespan {
-        display: none;
-    }
-/* float the section-header links "[edit] [edit source]" to right, where they're less distracting  */
-    .mw-editsection {
-        float: right;
-    }
-/* bigger text in NavPopups gadget */
-    .navpopup {
-        font-size: 0.875em;
-        line-height: 140%;
-    }
-    .popup_menu {
-        margin-top: 1.1em;
-    }
-/* Change the color of the highlightmyname script */
-    span.ais523hmn {
-        background-color: #fbe498 !important;
-    }
-/* Opacity in RC/Watchlist for users with 500+ edits */
-    .mw-changeslist-user-experienced {
-        opacity: 0.7;
-    }
-/* Test ooui tweaks, smaller menu rows */
-    .oo-ui-menuOptionWidget {
-        padding: 0.3em 1em;
-    }
-/* Hide the Legend box on RC pages */
-    .mw-changeslist-legend {
-        display: none;
-    }
-/* Opacity for revert/ed-edits in history pages */
-    .mw-tag-mw-undo,
-    .mw-tag-mw-rollback,
-    .mw-tag-mw-reverted {
-        opacity: 0.2;
-    }
-/* Make redirect links green - TEMP. OFF
+@-moz-document domain("wikipedia.org"),
+domain("meta.wikimedia.org"),
+domain("office.wikimedia.org"),
+domain("commons.wikimedia.org"),
+domain("species.wikimedia.org"),
+domain("outreach.wikimedia.org"),
+domain("wikimania.wikimedia.org"),
+domain("foundation.wikimedia.org"),
+domain("wikitech.wikimedia.org"),
+domain("wiktionary.org"),
+domain("mediawiki.org"),
+domain("wikisource.org"),
+domain("wikivoyage.org"),
+domain("wikibooks.org"),
+domain("wikinews.org"),
+domain("wikiversity.org"),
+domain("wikiquote.org"),
+domain("wikidata.org"),
+domain("beta.wmflabs.org"),
+domain("wikifunctions.org") {
+  /* Stop Menus jumping on page load */
+  @import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css'); 
+  
+  /* hide the ToC's annoying "[hide]" links */
+  .toctogglespan {
+    display: none;
+  }
+  
+  /* float the section-header links "[edit] [edit source]" to right, where they're less distracting  */
+  .mw-editsection {
+    float: right;
+  }
+  
+  /* bigger text in NavPopups gadget */
+  .navpopup {
+    font-size: 0.875em; line-height: 140%;
+  }
+  .popup_menu {
+    margin-top: 1.1em;
+  }
+  
+  /* Change the color of the highlightmyname script */
+  span.ais523hmn {
+    background-color: #fbe498 !important;
+  }
+  
+  /* Opacity in RC/Watchlist for users with 500+ edits */
+  .mw-changeslist-user-experienced {
+    opacity: 0.7;
+  }
+  
+  /* Test ooui tweaks, smaller menu rows */
+  .oo-ui-menuOptionWidget {
+    padding: 0.3em 1em;
+  }
+  
+  /* Hide the Legend box on RC pages */
+  .mw-changeslist-legend {
+    display: none;
+  }
+  
+  /* Opacity for revert/ed-edits in history pages */
+  .mw-tag-mw-undo,
+  .mw-tag-mw-rollback,
+  .mw-tag-mw-reverted {
+    opacity: 0.2;
+  }
+  
+  /* Make redirect links green - TEMP. OFF
   a.mw-redirect {color:#006600;
     } */
-/* Make disambig link orange */
-    a.mw-disambig {
-        color: #ff8921;
-    }
-/* Bold the sidebar's interwiki links to Enwiki/Simple, and interproject links to Commons/WikiVoyage/Wikisource */
-    .interwiki-en,
-    .interwiki-simple,
-    .wb-otherproject-commons,
-    .wb-otherproject-wikivoyage,
-    .wb-otherproject-wikisource,
-    .wikibase-sitelinkview-enwiki {
-        font-weight: bold;
-    }
-/* Force reduced # of rows in editing window */
-    #wpTextbox1 {
-        height: 30em;
-    }
-/* Global Font tweaks, better typography */
-    /* REMOVE FOR NOW
+  /* Make disambig link orange */
+  a.mw-disambig {
+    color: #ff8921;
+  }
+  
+  /* Bold the sidebar's interwiki links to Enwiki/Simple, and interproject links to Commons/WikiVoyage/Wikisource */
+  .interwiki-en,
+  .interwiki-simple,
+  .wb-otherproject-commons,
+  .wb-otherproject-wikivoyage,
+  .wb-otherproject-wikisource,
+  .wikibase-sitelinkview-enwiki {
+    font-weight: bold;
+  }
+  
+  /* Force reduced # of rows in editing window */
+  #wpTextbox1 {
+    height: 30em;
+  }
+  
+  /* Global Font tweaks, better typography */
+  /* REMOVE FOR NOW
     #content {
         color: black !important;
     } 
     */
-    h4 {
-        font-size: 116% !important;
-    }
-    h5 {
-        font-size: 100% !important;
-    }
-    h6 {
-        font-size: 80% !important;
-    }
-/* Hide "Retrieved [date]" in references */
-    .reference-accessdate {
-        display: none;
-    }
-/* Hide the New Vector "switch back" link in sidebar */
-    .mw-sidebar-action {
-        display: none;
-    }    
+  h4 {
+    font-size: 116% !important;
+  }
+  h5 {
+    font-size: 100% !important;
+  }
+  h6 {
+    font-size: 80% !important;
+  }
+  
+  /* Hide "Retrieved [date]" in references */
+  .reference-accessdate {
+    display: none;
+  }
+  
+  /* Hide the New Vector "switch back" link in sidebar */
+  .mw-sidebar-action {
+    display: none;
+  }
+  
+  /* Tables */
+  table.wikitable > tr > th,
+  table.wikitable > tr > td,
+  table.wikitable > * > tr > th,
+  table.wikitable > * > tr > td {
+    vertical-align: top;
+  }
 }
