--- a/dark.user.css
+++ b/dark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia DARK
 @namespace   StylishThemes
-@version     1.0.1
+@version     1.0.2
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/dark.user.css
 @license     CC-BY-SA-4.0
@@ -219,4 +219,13 @@ html .branding-box img {
         background: #000;
     }
 }
+
+@-moz-document url-prefix() {   
+	@supports (overflow-clip-margin: 1px) {     
+		body {
+			background: #fff;
+		}   
+	}
+}
+
 }
