--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia quiddity's various vector style tweaks
 @namespace   StylishThemes
-@version     1.0.35
+@version     1.0.36
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -135,5 +135,17 @@ domain("wikifunctions.org") {
   /* Hide the "print/export" sidebar navbox */
   #p-coll-print_export {
     display: none
+  }
+  
+  /* Change Vector 2022 ToC's "Beginning" to an Up-arrow */
+  #toc-mw-content-text div{
+    visibility: hidden
+  }
+  #toc-mw-content-text div::after {
+    visibility: visible;
+    content: "🠕";
+    display: block;
+    position: absolute;
+    top: 2px;
   }
 }
