fix sidebar at narrow widths, tweak title

--- a/new-vector-max-width.user.css
+++ b/new-vector-max-width.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
-@name        wikimedia DI max-width tweaks
+@name        Wikim V.2022 min/max-widths
 @namespace   StylishThemes
-@version     1.0.31
+@version     1.0.32
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-max-width.user.css
 @license     CC-BY-SA-4.0
@@ -29,15 +29,18 @@ domain("beta.wmflabs.org"),
 domain("wikifunctions.org") {
   /* NOTE: this assumes you are using Left-to-Right languages in NEW VECTOR ([[mw:Desktop Improvements]] beta) but also tries to work in Legacy Vector */
   
-  /* Remove max-width */
+  /* Remove sticky header max-width */
+  .vector-sticky-header {
+    max-width: none; 
+  }
+  
+  /* Remove full page's max-width */
   .mw-workspace-container {
     max-width: none !important;
   }
   .mw-content-container {
     max-width: none !important;
   }
-  
-  /* Refine further */
   .mw-page-container {
     max-width: none; padding: 1px;
   }
@@ -47,6 +50,18 @@ domain("wikifunctions.org") {
   .mw-sidebar {
     width: 184px
   }
+
+  /* Fix sidebar into an overlay, at small widths */
+  @media screen and (max-width: 999px) {
+    .mw-workspace-container {
+      position: absolute;
+      z-index: 4;
+    }
+  }
+  
+  
+  
+  /* OLD STUFF */
   
   /* Sidebar fixes   -- BROKEN ??? 
   #mw-sidebar-checkbox:not(:checked) ~ .mw-workspace-container .mw-content-container {
@@ -91,10 +106,4 @@ domain("wikifunctions.org") {
   .mw-header .vector-search-box {
     min-width: 10em;
   } */
-  
-  /* Fix sticky header width */
-  .vector-sticky-header {
-    max-width: none; 
-  }
-
 }
