--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.23
+@version     1.0.24
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -44,9 +44,9 @@ domain("wikifunctions.org") {
   
   /* ToC and Sidebar tweaks*/
   .sidebar-toc {
-    padding: 5px; 
-    margin: 5px !important; 
-    max-height: 90vh;
+    padding-left: 17px; 
+    margin: 0 !important; 
+    max-height: 100vh;
   }
   #mw-panel {
     padding: 0; 
@@ -55,6 +55,12 @@ domain("wikifunctions.org") {
   }
   .vector-toc-enabled .mw-sidebar, .vector-toc-enabled .sidebar-toc {
     width: 13.75em;
+  }
+  .sidebar-toc .sidebar-toc-text {
+    padding-right: 0
+  }
+  .sidebar-toc-contents {
+    width: 12.75em
   }
   
   /* Remove whitespace at edges */
@@ -92,7 +98,7 @@ domain("wikifunctions.org") {
     overflow: clip;
   }
   
-  /* Remove empty space at page-bottom -- needed on Wikitech */
+  /* Remove empty space at page-bottom */
   .mw-footer-container {
     padding-bottom: 0 !important;
   }
